--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <title>Bike</title>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="Program.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -95,6 +95,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="Program.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
